prime added jquery

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,9 @@
 <title>CompressIt - Video and Image Compression</title>
 <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+<!-- jQuery CDN (latest version from jQuery) -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
 <style>
       .gradient-bg {
         background: linear-gradient(180deg, #1A1D22 0%, #121416 100%);
