--- a/templates/image.html
+++ b/templates/image.html
@@ -6,6 +6,9 @@
 <title>Image Compressor</title>
 <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+<!-- jQuery CDN (latest version from jQuery) -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
 <style>
       .custom-file-input::-webkit-file-upload-button {
         visibility: hidden;
