--- a/templates/video.html
+++ b/templates/video.html
@@ -6,6 +6,9 @@
 <title>Video Compressor</title>
 <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+<!-- jQuery CDN (latest version from jQuery) -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
 </head>
 <body class="bg-[#111418] text-white font-inter">
 <div class="flex min-h-screen">
